# urlshortener-rs

./: .env.example  Cargo.toml  README.md  docker-compose.yml
src/: config.rs  db.rs  error.rs  main.rs  routes.rs
