[package]
name = "urlshortener"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
dotenvy = "0.15.7"
thiserror = "2.0.11"
anyhow = "1.0.100"

sqlx = { version = "0.8.3", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "chrono",
    "uuid",
] }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tower = { version = "0.5.2", features = ["limit"] }
tower-http = { version = "0.6.2", features = ["trace", "cors", "fs"] }

utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "chrono"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
